fix collect()->toList(), change to static method